Fixed header wrapping in IE and SVG mime types

--- a/Web/TroyHunt.css
+++ b/Web/TroyHunt.css
@@ -406,6 +406,7 @@ article
 #headerSideBar
 {
   text-align: right;
+  width: 568px;
 }
 
 aside
